--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <link href="https://fonts.googleapis.com/css?family=Raleway:regular,700,800&display=swap" rel="stylesheet" />
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="shortcut icon" type="image/svg" href="./img/lgog-img.svg">
    <link rel="stylesheet" href="./style/reset.css">
    <link rel="stylesheet" href="./style/style.css">
    <title>GoCorona</title>
