--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <header class="header">
          <div class="header__container">
             <a href="" class="header__logo"><img src="./img/logo.svg" alt="logo"></a>
-            <nav class="header__menu menu">
+            
+            <div class="header__menu menu">
+               <nav id="menu" class="menu__body">
                <ul class="menu__list">
                   <li class="menu__item">
                      <a href="" class="menu__link">HOME</a>
@@ -32,9 +34,11 @@
                      <a href="" class="menu__link">CONTACT US</a>
                   </li>
                </ul>
-            </nav>
+               </nav>
+            </div>
             <div class="header__button">
                <a href="" class="button button-blue">DOWNLOAD</a>
+               <a href="#menu" class="icon-menu"><span></span></a>
             </div>
          </div>
       </header>
