--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
       <header class="header">
          <div class="header__container">
             <a href="" class="header__logo"><img src="./img/logo.svg" alt="logo"></a>
-            
+
             <div class="header__menu menu">
                <nav id="menu" class="menu__body">
-               <ul class="menu__list">
-                  <li class="menu__item">
-                     <a href="" class="menu__link">HOME</a>
-                  </li>
-                  <li class="menu__item">
-                     <a href="" class="menu__link">FEATURES</a>
-                  </li>
-                  <li class="menu__item">
-                     <a href="" class="menu__link">SUPPORT</a>
-                  </li>
-                  <li class="menu__item">
-                     <a href="" class="menu__link">CONTACT US</a>
-                  </li>
-               </ul>
+                  <ul class="menu__list">
+                     <li class="menu__item">
+                        <a href="" class="menu__link">HOME</a>
+                     </li>
+                     <li class="menu__item">
+                        <a href="" class="menu__link">FEATURES</a>
+                     </li>
+                     <li class="menu__item">
+                        <a href="" class="menu__link">SUPPORT</a>
+                     </li>
+                     <li class="menu__item">
+                        <a href="" class="menu__link">CONTACT US</a>
+                     </li>
+                  </ul>
                </nav>
             </div>
             <div class="header__button">
@@ -42,7 +42,42 @@
             </div>
          </div>
       </header>
-      <main class="main"></main>
+      <main class="main">
+         <section class="main__hero hero">
+            <div class="hero__container">
+               <div class="hero__content">
+                  <div class="hero__block block-text">
+                     <h1 class="block-text__title block-text__title--blue">Take care of yours family’s
+                        <span>health.</span>
+                     </h1>
+                     <p class="block-text__text">
+                        All in one destination for COVID-19 health queries. Consult 10,000+ health workers about your
+                        concerns.
+                     </p>
+                     <button class="block-text__button button">GET STARTED</button>
+                  </div>
+               </div>
+               <div class="hero__img">
+                  <img src="./img/hero/img-hero.svg" alt="doctor with child">
+               </div>
+               <div class="hero__video ">
+                  <a href="" class="video-hero">
+                     <div class="video-hero__icon">
+                        <img src="./img/hero/icon-play.svg" alt="icon play">
+                     </div>
+                     <div class="video-hero__body body-video-hero">
+                        <h4 class="body-video-hero__title">
+                           Stay safe with GoCorona
+                        </h4>
+                        <p class="body-video-hero__text">
+                           Watch Video
+                        </p>
+                     </div>
+                  </a>
+               </div>
+            </div>
+         </section>
+      </main>
       <footer class="footer"></footer>
    </wrapper>
 </body>
