--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       <header class="header">
          <div class="header__container">
             <a href="" class="header__logo"><img src="./img/logo.svg" alt="logo"></a>
-
             <div class="header__menu menu">
                <nav id="menu" class="menu__body">
                   <ul class="menu__list">
@@ -74,6 +73,32 @@
                         </p>
                      </div>
                   </a>
+               </div>
+            </div>
+         </section>
+         <section class="main__stay-safe stay-safe">
+            <div class="stay-safe__container">
+               <div class="stay-safe__media media-stay-safe">
+                  <div class="media-stay-safe__wrapper">
+                     <div class="media-stay-safe__img">
+                        <img src="./img/stay-safe/app.png" alt="app">
+                     </div>
+                     <div class="media-stay-safe__icon media-stay-safe__icon--1"></div>
+                     <div class="media-stay-safe__icon media-stay-safe__icon--2"></div>
+                     <div class="media-stay-safe__icon media-stay-safe__icon--3"></div>
+                  </div>
+               </div>
+               <div class="stay-safe__content">
+                  <div class="stay-safe__block block-text">
+                     <h2 class="block-text__title">
+                        Stay safe with Go<span>Corona.</span>
+                     </h2>
+                     <p class="block-text__text">
+                        24x7 Support and user friendly mobile platform to bring healthcare to your fingertips. Signup
+                        and be a part of the new health culture.
+                     </p>
+                     <button class="block-text__button button">Features</button>
+                  </div>
                </div>
             </div>
          </section>
