add section experts:

--- a/index.html
+++ b/index.html
@@ -102,6 +102,51 @@
                </div>
             </div>
          </section>
+         <section class="experts">
+            <div class="experts__container">
+               <div class="experts__statistic statistic-experts">
+                  <div class="statistic-experts__body">
+                     <ul class="statistic-experts__list">
+                        <li class="statistic-experts__item">
+                           <p class="statistic-experts__value">2m</p>
+                           <p class="statistic-experts__text">Users</p>
+                        </li>
+                        <li class="statistic-experts__item">
+                           <p class="statistic-experts__value">78</p>
+                           <p class="statistic-experts__text">Countries</p>
+                        </li>
+                        <li class="statistic-experts__item">
+                           <p class="statistic-experts__value">10,000+</p>
+                           <p class="statistic-experts__text">Medical experts</p>
+                        </li>
+                     </ul>
+                  </div>
+                  <div class="statistic-experts__items statistic-experts__items--1"></div>
+                  <div class="statistic-experts__items statistic-experts__items--2"></div>
+                  <div class="statistic-experts__items statistic-experts__items--3"></div>
+               </div>
+               <div class="experts__body">
+                  <div class="experts__content">
+                     <div class="experts__block experts-block-text">
+                        <h2 class="block-text__title block-text__title--blue">
+                           Talk to <span>experts.</span>
+                        </h2>
+                        <p class="block-text__text">
+                           Book appointments or submit queries into thousands of forums concerning health issues and
+                           prevention against noval Corona Virus.
+                        </p>
+                        <button class="block-text__button button">Features</button>
+                     </div>
+                  </div>
+                  <div class="experts__video">
+                     <iframe src="https://www.youtube.com/embed/sohdv21BVNI?si=UKMYzDFm3bO0reBe"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       <footer class="footer"></footer>
    </wrapper>
