--- a/index.html
+++ b/index.html
@@ -126,26 +126,93 @@
                <div class="experts__body">
                   <div class="experts__content">
                      <div class="experts__block block-text">
-                     <h1 class="block-text__title block-text__title--blue">Talk to
-                        <span>experts.</span>
-                     </h1>
-                     <p class="block-text__text">
-                       Book appointments or submit queries into thousands of forums concerning health issues and prevention against noval Corona Virus.
-                     </p>
-                     <button class="block-text__button button">GET STARTED</button>
-                  </div>
+                        <h1 class="block-text__title block-text__title--blue">Talk to
+                           <span>experts.</span>
+                        </h1>
+                        <p class="block-text__text">
+                           Book appointments or submit queries into thousands of forums concerning health issues and
+                           prevention against noval Corona Virus.
+                        </p>
+                        <button class="block-text__button button">GET STARTED</button>
+                     </div>
                   </div>
                   <div class="experts__media media-experts">
                      <div class="media-experts__video">
-                        <iframe src="https://www.youtube.com/embed/sohdv21BVNI?si=YZj-Rm1LlxWFH8pc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/sohdv21BVNI?si=YZj-Rm1LlxWFH8pc"
+                           title="YouTube video player" frameborder="0"
+                           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                           allowfullscreen></iframe>
                      </div>
                   </div>
                </div>
             </div>
          </section>
+         <section class="healthcare">
+            <div class="healthcare__container">
+               <div class="healthcare__content">
+                  <div class="healthcare__block block-text">
+                     <h2 class="block-text__title block-text__title--center"> <span>Healthcare</span> at your
+                        Fingertips.
+                     </h2>
+                     <p class="block-text__text">
+                        Bringing premium healthcare features to your fingertips. User friendly mobile platform to bring
+                        healthcare to your fingertips. Signup and be a part of the new health culture.
+                     </p>
+                  </div>
+               </div>
+               <ul class="healthcare__list">
+                  <div class="wrapper-item-healthcare item-healthcare--decor1">
+                     <li class="healthcare__item item-healthcare">
+                        <div class="item-healthcare__icon">
+                           <img src="./img/healthcare/person.svg" alt="person">
+                        </div>
+                        <h4 class="item-healthcare__title">
+                           Symptom Checker
+                        </h4>
+                        <p class="item-healthcare__text">
+                           Check if you are infected by COVID-19 with our Symptom Checker
+                        </p>
+                     </li>
+                  </div>
+                  <div class="wrapper-item-healthcare item-healthcare--decor2">
+                     <li class="healthcare__item item-healthcare">
+                        <div class="item-healthcare__icon">
+                           <img src="./img/healthcare/doctor.svg" alt="doctor">
+                        </div>
+                        <h4 class="item-healthcare__title">
+                           24x7 Medical support
+                        </h4>
+                        <p class="item-healthcare__text">
+                           Consult with 10,000+ health workers about your concerns.
+                        </p>
+                     </li>
+                  </div>
+                  <div class="wrapper-item-healthcare item-healthcare--decor3">
+                     <li class="healthcare__item item-healthcare">
+                        <div class="item-healthcare__icon">
+                           <img src="./img/healthcare/heart.svg" alt="heart">
+                        </div>
+                        <h4 class="item-healthcare__title">
+                           Conditions
+                        </h4>
+                        <p class="item-healthcare__text">
+                           Bringing premium healthcare features to your fingertips.
+                        </p>
+                     </li>
+                  </div>
+               </ul>
+            </div>
+         </section>
+         <footer class="footer">
+            <div class="footer__container">
+               <div class="footer__media media-footer">
+                  <a href="" class="media-footer__item"><img src="./img/footer/google.png" alt="google"></a>
+                  <a href="" class="media-footer__item"><img src="./img/footer/apple.png" alt="apple"></a>
+               </div>
+            </div>
+         </footer>
       </main>
       <footer class="footer"></footer>
    </wrapper>
 </body>
-
 </html>
